# forefire

./: .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CMakeListsTemplate.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUELCOVER.md  LICENSE  README.md  TESTING.md  cmake-build.sh  increment-version.sh  install-forefire-osx.sh  install-forefire.sh  test-forefire.sh
.github/workflows/: docker.yml  dockerhub.yml  increment-version.yml  macos.yml  main.yml
app/forefire/: AdvancedLineEditor.hpp
bindings/java/: JLibForeFire.cpp  JLibForeFire.h
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/src/pyforefire/: _pyforefire.cpp
docs/: readme.md
docs/UserGuide/: ForeFirePostProcessing.tex
docs/doxygen/: Doxyfile
docs/source/: api_reference.rst  basic_configuration.rst  conf.py  index.rst  installation.rst  introduction.rst  quickstart.rst  requirements.txt  running_the_example.rst
docs/source/_static/: custom.css
docs/source/about/: citation.rst  license.rst  statement_of_need.rst
docs/source/getting_started/: execution_modes.rst  installation.rst  introduction.rst  quickstart.rst  running_the_example.rst
docs/source/reference/: api_reference.rst  commands.rst  parameters.rst
docs/source/user_guide/: basic_configuration.rst  core_concepts.rst  forefire_script.rst  fuels_and_models.rst  fuels_file.rst  landscape_file.rst
docs/user_guide_v1/: README.md
docs/user_guide_v1/UserGuide/: ForeFireGeneralUsage.tex  ForeFireParams.tex
docs_legacy/UserGuide/: ForeFireExampleCases.tex  ForeFireModels.tex  ForeFireUserGuide.tex
examples/htdocs/: index.html
paper/: paper.bib  paper.md
src/: ANN.h  ANNPropagationModel.cpp  Andrews.cpp  ArrayDataLayer.h  AtmosphericData.cpp  AtmosphericData.h  BMapLoggerForANNTraining.cpp  Balbi2015.cpp  Balbi2020.cpp  BalbiNov2011.cpp  BalbiNov2011Curv.cpp  BalbiNov2011TMdMl.cpp  BalbiUnsteady.cpp  BurningMap.cpp  BurningMap.h  BurningMapLayer.h  BurningRatioLayer.h  BurnupHeatFluxModel.cpp  CLibForeFire.cpp  CLibForeFire.h  Command.cpp  Command.h  CommandShell.cpp  CommandShell.h  CraterHeatFluxModel.cpp  CraterSO2FluxModel.cpp  CraterVaporFluxModel.cpp  CurvatureDrivenPropagationModel.cpp  DataBroker.cpp  DataBroker.h  DataLayer.h  EventCommand.cpp  EventCommand.h  FDCell.cpp  FDCell.h  FFArrays.h  FFEvent.cpp  FFEvent.h  FFPoint.cpp  FFPoint.h  (+78 more)
src/flux/: BurnupHeatFluxModel.cpp  CraterHeatFluxModel.cpp  CraterSO2FluxModel.cpp  CraterVaporFluxModel.cpp  FactorChemFluxModel.cpp  ForeFireV1HeatFluxModel.cpp  ForeFireV1VaporFluxModel.cpp  HeatFluxBasicModel.cpp  HeatFluxFromObsModel.cpp  HeatFluxNominalModel.cpp  LavaCO2FluxModel.cpp  LavaHCLFluxModel.cpp  LavaHeatFluxModel.cpp  LavaLazeFluxModel.cpp  LavaSO2FluxModel.cpp  ScalarFluxNominalModel.cpp  ScalarFromObsModel.cpp  SpottingFluxBasicModel.cpp  VaporFluxBasicModel.cpp  VaporFluxFromObsModel.cpp  VaporFluxNominalModel.cpp
src/include/: FFConstants.h  Futils.h  Version.h
src/propagation/: ANNPropagationModel.cpp  BMapLoggerForANNTraining.cpp  Balbi2015.cpp  Balbi2020.cpp  BalbiNov2011.cpp  BalbiNov2011Curv.cpp  BalbiNov2011TMdMl.cpp  BalbiUnsteady.cpp  CurvatureDrivenPropagationModel.cpp  FarsitePropagationModel.cpp  FrontDepthDrivenPropagationModel.cpp  IsotropicFuelPropagationModel.cpp  IsotropicIsospeed.cpp  LavaPropagationModel.cpp  Rothermel.cpp  RothermelAndrews2018.cpp  SamplePropagationModel.cpp  TroisPourcent.cpp  WindDrivenPropagationModel.cpp
tests/: .gitattributes  Makefile  README.md  TEMPLATE_config_firecast_local.bash  clean.bash  firecast.bash  run.bash
tests/mnh_ideal/: EXSEG1.nam  RELIEF3D.des  RELIEF3D.lfi  RELIEF3DX.lfi  clean.bash  run.bash
tests/mnh_ideal/ForeFire/: ForeFire.0.nc.ref  Init.ff  Params.ff  fuels.csv  lpsimple.cdl
tests/mnh_real_nested/: EXSEG1.nam  EXSEG2.nam  M2.20170617.00.15.des  M2.20170617.00.15.nc  PGD_D3200mA.nested.nc  PGD_D800mA.nested.nc  RUN12.1.PRUN1.004.des  RUN12.1.PRUN1.004.nc  clean.bash  run.bash
tests/mnh_real_nested/ForeFire/: ForeFire.0.nc.ref  Init.ff  Params.ff  (+3 more)
tests/python/: 360wind.png.ref  README.md  clean.bash  farsite_flat.py  flatland_3mph0deg7hr.raws  idealized_wind.py  percolation.nc.ref  percolation.py  readme.md  run.bash
tests/runANN/: Rothermel.ffann  clean.bash  modelrun.csv  result.txt  result.txt.ref  run.bash
tests/runff/: .gitignore  ForeFire.0.nc.ref  check_data_nc.bash  clean.bash  compare_kml.py  compare_nc.py  data.nc  ff-run.bash  index.html  main.js  params.ff  real_case.ff  real_case.kml.ref  reload_case.ff  run.bash  run.ff  rungeojson.ff  sample_simulation.ff  styles.css
tools/: TEMPLATE_config_firecast_local.bash  TODO.md  check_all_lfs.bash  firecast.bash  increment-version.sh  makeColormapH.py
tools/2NEST/: PRE_REAL1.nam.P00  PRE_REAL1.nam.P06  PRE_REAL1.nam.P15  PRE_REAL1s.nam  SPAWN1.nam  clean_but_run_fire  run_VTK_for_paraview  run_build_pgd_and_nest  run_ecmwf2mnh_xyz  run_run_mnh_fire
tools/2NEST_3200_40X40_800_24X24/: BuildReport.py  EXSEG1.nam  EXSEG1FIRE.nam  EXSEG1PRUN.nam  PRE_NEST_PGD1.nam  PRE_PGD1.nam_800m  PRE_PGD1.nam_LARGESTm  PRE_REAL1.nam.M03  PRE_REAL1.nam.P03  PRE_REAL1.nam.P09  PRE_REAL1.nam.P12  get_ecmwfBC  get_pgd_files  index.php  makeKMZ.bash  run_VTK_for_paraview  run_build_pgd_and_nest  run_run_mnh_M1  run_spawn_real
tools/ai/: compile.py
tools/devops/: Dockerfile.base  entrypoint.sh  readme.md
tools/docker/: Dockerfile.multistage
tools/forefire/: AdvancedLineEditor.cpp  AdvancedLineEditor.hpp  ForeFire.cpp  commands.md
tools/grib2weatherNC/: grib2ffnc.cpp
tools/htdocs/: index.html  metflix.html  style.css
tools/postprocessing/: BuildReport.py  MNHCDF_to_FFNC_atmodataset.py  atmo_fire_plotsFrom.py  pMNHFF2VTK.py  pMNHFF2vdb.py  pMNHFF2vti.py  vtk2gpkg.py
tools/preflight/: verify-lfs.sh
tools/preprocessing/: READMEscripts.md  create_data.py  create_data_bmap_nc.py  create_data_tools.py  extract_from_eu_land_cover.py  ffToGeo.py  kmlDomain.py  lidar2fuel.py  parametersProperties.py  run_data.py  run_data_simple.py  upDirHDR.py
tools/runANN/: ANNTest.cpp
(+23 files in other folders)
