[project]
name = "pyforefire"
version = "2024.1"
dependencies = [
    "pybind11",
    "numpy",
    "matplotlib"
]
requires-python = ">=3.8"
authors = [
  { name = "Jean-Baptiste Filippi", email = "filippi_j@univ-corse.fr" },
  { name = "Quentin Duriani", email = "qduriani@gmail.com" }
]
maintainers = [
  { name = "Jean-Baptiste Filippi", email = "filippi_j@univ-corse.fr" }
]
description = "Python version of ForeFire library"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["ForeFire", "forefire", "pyforefire", "pybind", "pybind11"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/forefireAPI/forefire"
Repository = "https://github.com/forefireAPI/forefire"
